--- a/UnitTestProject2/packages.config
+++ b/UnitTestProject2/packages.config
@@ -2,4 +2,8 @@
 <packages>
   <package id="MSTest.TestAdapter" version="1.2.1" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.2.1" targetFramework="net461" />
+  <package id="Selenium.Firefox.WebDriver" version="0.20.0" targetFramework="net461" />
+  <package id="Selenium.WebDriver" version="3.12.0" targetFramework="net461" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="2.38.0.1" targetFramework="net461" />
+  <package id="Selenium.WebDriver.IEDriver" version="3.12.0" targetFramework="net461" />
 </packages>
